테이블 폰트 사이즈 수정

--- a/public/css/church_library-public.css
+++ b/public/css/church_library-public.css
@@ -12,3 +12,7 @@
 .daworks_church_library_latest_table {
 	font-size:13px;
 }
+.daworks_church_library_table {
+	font-size:13px;
+	letter-spacing:-0.03em;
+}
