글자 간격 수정

--- a/public/css/church_library-public.css
+++ b/public/css/church_library-public.css
@@ -11,6 +11,7 @@
 }
 .daworks_church_library_latest_table {
 	font-size:13px;
+	letter-spacing:-0.03em;
 }
 .daworks_church_library_table {
 	font-size:13px;
